--- a/app/index.html
+++ b/app/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html ng-app>
 <head>
   <meta charset="utf-8">
   <title>BookMoney</title>
 </head>
-<body>
-  <h1>Hello BookMoney</h1>
+<body ng-init="name='Book Money'">
+  <h1>Hello {{name}}</h1>
+  <input type='text' ng-model='name'/>
+
+  <!-- Scripts -->
+  <script src='lib/angular/angular.js'></script>
+  <script src='lib/angular-route/angular-route.js'></script>
 </body>
 </html>
