--- a/app/index.html
+++ b/app/index.html
@@ -1,15 +1,22 @@
 <!DOCTYPE html>
-<html ng-app>
+<html ng-app="bmApp">
 <head>
   <meta charset="utf-8">
   <title>BookMoney</title>
 </head>
-<body ng-init="name='Book Money'">
-  <h1>Hello {{name}}</h1>
-  <input type='text' ng-model='name'/>
+<body>
+  <header>
+    <h1>BookMoney</h1>
+  </header>
+
+  <div ng-view>
+  </div>
 
   <!-- Scripts -->
   <script src='lib/angular/angular.js'></script>
   <script src='lib/angular-route/angular-route.js'></script>
+
+  <script src='scripts/app.js'></script>
+  <script src='scripts/controllers/book_details.js'></script>
 </body>
 </html>
