--- a/app/index.html
+++ b/app/index.html
@@ -18,5 +18,7 @@
 
   <script src='scripts/app.js'></script>
   <script src='scripts/controllers/book_details.js'></script>
+  <script src='scripts/controllers/book_list.js'></script>
+
 </body>
 </html>
