--- a/app/index.html
+++ b/app/index.html
@@ -19,6 +19,6 @@
   <script src='scripts/app.js'></script>
   <script src='scripts/controllers/book_details.js'></script>
   <script src='scripts/controllers/book_list.js'></script>
-
+  <script src='scripts/services/book_data.js'></script>
 </body>
 </html>
